# client

./: .clang-tidy  CMakeLists.txt  app.cc  app.cpp  app.h  config.h  context.cpp  context.h  main.cpp  menu.cpp  menu.h  play.cpp  play.h  test_main.cpp  utils.cpp  utils.h  wait.cpp  wait.h  window.cpp  window.h
include/reversi/client/: app.h  config.h  context.h  menu.h  play.h  wait.h  window.h  worker.h
src/reversi/client/: CMakeLists.txt  app.cc  context.cc  menu.cc  play.cc  wait.cc  window.cc  worker.cc
test/: CMakeLists.txt  test_main.cc
